added button icons

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <td>
         <div>
             <button id="gripbutton" type="button" class="soundbutton">
-                <b style="font-size: xx-large">ГРИП</b>
+                <img src="img/grip.png" alt="ГРИП">
             </button>
         </div>
     </td>
     <td>
         <div>
             <button id="nenormalbutton" type="button" class="soundbutton">
-                <b style="font-size: x-small">НЕ НОРМАЛЬНЫЙ?</b>
+                <img src="img/nenormal.png" alt="НЕ НОРМАЛЬНЫЙ?">
             </button>
         </div>
     </td>
     <td>
         <div>
             <button id="molotokbutton" type="button" class="soundbutton">
-                <b style="font-size: medium">МОЛОТОК</b>
+                <img src="img/molotok.png" alt="МОЛОТОК">
             </button>
         </div>
     </td>
@@ -42,7 +42,7 @@
     <td>
         <div>
             <button id="avotinetbutton" type="button" class="soundbutton">
-                <b style="font-size: medium">А ВОТ И НЕТ</b>
+                <img src="img/avotinet.png" alt="А ВОТ И НЕТ">
             </button>
         </div>
     </td>
